facet-diff/tests/snapshots/diff_snapshots__diff_i32_vs_value_number_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│42          │
╰────────────╯
╭After───────╮
│100         │
╰────────────╯
╔Diff════════╗
║100 → 42    ║
╚════════════╝
