facet-diff/tests/snapshots/diff_snapshots__diff_integers_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│42          │
╰────────────╯
╭After───────╮
│42          │
╰────────────╯
╔Diff════════╗
║42          ║
╚════════════╝
