facet-diff/tests/snapshots/diff_snapshots__diff_large_vec_scattered_changes.snap
---
source: facet-diff/tests/diff_snapshots.rs
assertion_line: 1187
expression: "format_diff_comparison(&a, &b)"
---
Vec<i32> [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
Vec<i32> [0, 1, 2, 300, 4, 5, 6, 700, 8, 9, 10, 11, 12, 13, 14, 1500, 16, 17, 18, 19]
[
  .. 3 unchanged items
  3 → 300
  .. 3 unchanged items
  7 → 700
  .. 7 unchanged items
  15 → 1500
  .. 4 unchanged items
]
