facet-diff/tests/snapshots/diff_snapshots__diff_large_vec_with_insertions_and_deletions.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────╮[0m
[36m│[0mVec<i32> [  [36m│[0m
[36m│[0m  1,        [36m│[0m
[36m│[0m  2,        [36m│[0m
[36m│[0m  3,        [36m│[0m
[36m│[0m  4,        [36m│[0m
[36m│[0m  5,        [36m│[0m
[36m│[0m  6,        [36m│[0m
[36m│[0m  7,        [36m│[0m
[36m│[0m  8,        [36m│[0m
[36m│[0m  9,        [36m│[0m
[36m│[0m  10,       [36m│[0m
[36m│[0m]           [36m│[0m
[36m╰────────────╯[0m
[32m╭After───────╮[0m
[32m│[0mVec<i32> [  [32m│[0m
[32m│[0m  1,        [32m│[0m
[32m│[0m  2,        [32m│[0m
[32m│[0m  100,      [32m│[0m
[32m│[0m  101,      [32m│[0m
[32m│[0m  5,        [32m│[0m
[32m│[0m  6,        [32m│[0m
[32m│[0m  8,        [32m│[0m
[32m│[0m  9,        [32m│[0m
[32m│[0m  10,       [32m│[0m
[32m│[0m  11,       [32m│[0m
[32m│[0m  12,       [32m│[0m
[32m│[0m]           [32m│[0m
[32m╰────────────╯[0m
[33m╔Diff════════╗[0m
[33m║[0m[           [33m║[0m
[33m║[0m  1         [33m║[0m
[33m║[0m  2         [33m║[0m
[33m║[0m  [31m3[39m → [32m100[39m   [33m║[0m
[33m║[0m  [31m4[39m → [32m101[39m   [33m║[0m
[33m║[0m  5         [33m║[0m
[33m║[0m  6         [33m║[0m
[33m║[0m  [31m- 7[39m       [33m║[0m
[33m║[0m  8         [33m║[0m
[33m║[0m  9         [33m║[0m
[33m║[0m  10        [33m║[0m
[33m║[0m  [32m+ 11[39m      [33m║[0m
[33m║[0m  [32m+ 12[39m      [33m║[0m
[33m║[0m]           [33m║[0m
[33m╚════════════╝[0m
