facet-diff/tests/snapshots/diff_snapshots__diff_native_array_vs_value_array_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│[i64; 3] [          │
│  1,                │
│  2,                │
│  3,                │
│]                   │
╰────────────────────╯
╭After───────────────╮
│[                   │
│  1,                │
│  2,                │
│  3,                │
│]                   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
