facet-diff/tests/snapshots/diff_snapshots__diff_nonempty_to_empty_vec.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│Vec<i32> [  │
│  1,        │
│  2,        │
│  3,        │
│]           │
╰────────────╯
╭After───────╮
│Vec<i32>[]  │
╰────────────╯
╔Diff════════╗
║[           ║
║  - 1       ║
║  - 2       ║
║  - 3       ║
║]           ║
╚════════════╝
