facet-diff/tests/snapshots/diff_snapshots__diff_options_both_none.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────╮[0m
[36m│[0m[2mNone[0m        [36m│[0m
[36m╰────────────╯[0m
[32m╭After───────╮[0m
[32m│[0m[2mNone[0m        [32m│[0m
[32m╰────────────╯[0m
[33m╔Diff════════╗[0m
[33m║[0mNone        [33m║[0m
[33m╚════════════╝[0m
