facet-diff/tests/snapshots/diff_snapshots__diff_options_both_some_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────╮[0m
[36m│[0mSome(42)    [36m│[0m
[36m╰────────────╯[0m
[32m╭After───────╮[0m
[32m│[0mSome(100)   [32m│[0m
[32m╰────────────╯[0m
[33m╔Diff════════╗[0m
[33m║[0m[1mSome[0m [31m- 42[39m   [33m║[0m
[33m║[0m[32m+ 100[39m       [33m║[0m
[33m╚════════════╝[0m
