facet-diff/tests/snapshots/diff_snapshots__diff_options_nested_structs.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│Some(User {             │
│  name: "Alice",        │
│  age: 30,              │
│})                      │
╰────────────────────────╯
╭After───────────────────╮
│Some(User {             │
│  name: "Alice",        │
│  age: 31,              │
│})                      │
╰────────────────────────╯
╔Diff════════════════════╗
║Some {                  ║
║    .. 1 unchanged field║
║    age: 30 → 31        ║
║}                       ║
╚════════════════════════╝
